--- a/front/package.json
+++ b/front/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview --port 5173 --host 0.0.0.0"
   },
   "dependencies": {
     "vue": "^3.5.12",
