--- a/compose.yml
+++ b/compose.yml
@@ -31,10 +31,12 @@ services:
      DATABASE_PASSWORD: ${DATABASE_PASSWORD}
      DATABASE_HOST: ${DATABASE_HOST}
      DATABASE_PORT: ${DATABASE_PORT}
+   command: python manage.py runserver 0.0.0.0:8000
    env_file:
      - .env
    volumes:
      - ../app:/app
+     
 
 volumes:
    postgres_data:
